[package]
name = "jdk-import-ssl-keys"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
strum_macros = "0.26.2"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
